amun/overlays/ocp4-stage/amun-api/route.enc.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: amun-api-route53
spec:
    host: amun.stage.thoth-station.ninja
    to:
        kind: Service
        name: amun-api
        weight: 100
    tls:
        termination: ENC[AES256_GCM,data:/W7hxg==,iv:1YLyH8iZ29CBqeI4IdPbofwJ6QjCVChD5msJFLd/mbg=,tag:Zi8SnATPVC0txCxFLLSNBQ==,type:str]
        certificate: ENC[AES256_GCM,data:1ZSmB4UNLPFffSfyU9GJqfHAmEgSpGMHtnF/NQO+13iB+fzVzkL/FAiUor8nitF4yq2P/UsoSOgAXRDWjzImo61lAPdENM0cv0or7JQzYlrqD9qsZlvuULqrdv1US5K0VHimShApif27I1v3gDdjeNg5qqgJqzPxdn0UUs7Dxal6UBdx1GVlV1EZ8hq4ytRF1DOBzuhyqAWp0i/eQYyIQdlbj/uymqgqcItK8VUNF8iA94+RV+ABovYZUGcOMn/WSNaQaBQFq/eJcTO/Thzm2HWni5mZ5DNlJGJWvwg2xeRe3oBgdNH2NtgXDOGZpIjwoqF4MAlM3t0r5FfDD8FTQVq2aGhZWFCoiqvaDMXSX/fXuQYXnpVCSv6GpQxGIGrPJBpki8ETVfAJGDxVlCtvdJCsp0wq+kbKVlPMVjRwWaZa+sorNIBHj3V6C+Vn/q8Gk5V8U0Rrdjv [...]
        key: ENC[AES256_GCM,data:3Pnm4q+pH43kEztkgmWj8VqhaPNC1zMaPkHfd7CiR40AdccS4VHJB+nL9x7cIp2zSD+E/1AVPgz5AQ+A78/qkxTyohVLh7Hfm62qN+2IO6FArVQQRvfRl0JtXHKAKaTgteNPMaQDjO3g1BNc/ejxPugOA0NOFYRv6qRSnCITe547cs4dNO87BjcR5y317IASZjNgVBnFS8nx7O0Sme9789d09UsvU87FLJSCBwhBTb/oRAvPEQAP6GgAqW6cnCJNOwnNwslTmLBeZbpLuItPysUhMb0XmQnytZzzRM4YYVFrqymfjbgTBE/wX+cvh4i6oYYT7GRheokWnPXf/1KKwM80PQVJNlxaOf+ugmQ9rArmhBPSOLrXZCod3zh8zEicoU86izUrc1pYhlEWQIPgiyE11yiB5HzhsE31jAiVQyuCPEeojbZMihwh2JqFyQd7hMXJ4xIu0ETrW2xRmdW [...]
        caCertificate: ENC[AES256_GCM,data:PkSFCgcGzv6psZt+d2utArrrXYOQka3A5ug082l7qgcGv57UiCdi+fhFgQWjsVdg2MbjEpYzHubfU3sAvMF83ditpejRLxqXoOsjSBpMQNudX+ZTHgZ8s9e+hk+c4UAIFwtZ6AZGPiv98xpuXv2R8WcAXbFcIIA9nymz50j8+gmF1Ott6Wo147wOXcOQc2EQDUEXcXbEvHFZYoi7Q3S64VXdbYqctrdI5VA3/S/Zcasep7Q3nQAzDL9KTr5AJ9t9hez8sC2Naeoyqx/eCRaAos8Fspt/NG1z/F1cqarsbThffDlYjoprmyTCeZh7aYtZP+5n8lDYOXElQ2xr+eWDDbjubSvJSzDyrw/6g4EWTau2eAy2zHHY1dqGcS4PNoQNA7adeiVFP/+BrmTydf/zQ2s1An5QCOTvQUDTDSUyD4K7OiaNELXOs2nspPorxpHlYVH9oCXBJ [...]
    wildcardPolicy: None
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2023-01-03T16:51:35Z"
    mac: ENC[AES256_GCM,data:r791YBYGnrP5T/pIj7sd7slBX+iIvH6dPC7DZNNYLMxTCILRtqJRqSAbCF9YC9vh/rV60ajPx5Zz84M6t6ijFxo7fCfzCC4IAtGbyikCc9wdVcJ3weC3jkDz/G3aLGnJBmcuxOMjebBqCWpuTUM85rLMwwrYbJ93GsUywTggff8=,iv:gKe+de8k4MdgjubrbTu9QeelmJwApeMDq/rap5HbyNw=,tag:7+z8NSbRo2XeKPww2IcslA==,type:str]
    pgp:
        - created_at: "2023-01-03T16:51:34Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcFMA1gbAjViyxWYARAAudy6rajlfUEvwTx2LZCcWHo4Q0xVRtE1lm8ap+1rzOKu
[...]
            J2Gh1AQdaXy9/apbmryUu3wTntwWb9rfoyDLoS6VXENdeQ==
            =onyh
            -----END PGP MESSAGE-----
          fp: 34AFE2A7C8E00ED66916D95DA9FBD7DE773B2A34
        - created_at: "2023-01-03T16:51:34Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcBMA+/WpawS9RPbAQgAnb9/VrIAQKaEpia2p/YYrtPSZnspsjnclnpLW0d4Ahi0
[...]
            YQqYvKOZ91ZtZbDnUruvHx7b
            =+kdr
            -----END PGP MESSAGE-----
          fp: 87FC5D0ACF3AA48FCC029086262A80E41BCEEBF7
        - created_at: "2023-01-03T16:51:34Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQf+JC1DqP8vaOUvDehm/o0MiJis6nPM6sKGyQZ5ph3bEkPK
[...]
            Ll87aqC5sFt4SzCd3Q7NI7GAIvMtfk1I9mAe+6Y=
            =XIS2
            -----END PGP MESSAGE-----
          fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
        - created_at: "2023-01-03T16:51:34Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcFMA9aKBcudqifiAQ//crI4v7I8p0ImVliYD5y2iehnwcBiBF4qQ4lHXwUi61DR
[...]
            NsWL/B3M0OcIG4HSuXMx0VMgj0ryhrrbrbjq6YXdGXDQtw==
            =wP7N
            -----END PGP MESSAGE-----
          fp: 0508677DD04952D06A943D5B4DC4116D360E3276
        - created_at: "2023-01-03T16:51:34Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcFOA9LRbhPydJmLEAf/VIL3xyMgNBJFJTEwOEIWnB6RUabSBjS08Ow8XrkKCfiX
[...]
            n9PBiAaFYK+loudlUZd9MV1AL0kXLbkOZBThVWJcPGDNnq6x
            =q2Bb
            -----END PGP MESSAGE-----
          fp: 8D191B7544E9CCC3547B25A877E5A5B31D13A647
        - created_at: "2023-01-03T16:51:34Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcFMA9NBwWNwg7uAAQ/+LSnImlC2LpP5TnKflSziprIgyQzif6076WVWVJPVdjFK
[...]
            ENT4AsZPmbLp+aqCyx+uXfeadwY0G0rlC5VVa5+wXo5wLQ==
            =6hba
            -----END PGP MESSAGE-----
          fp: A01778ACB7CC4D41B00FDD78CCBE624D8FF6D016
        - created_at: "2023-01-03T16:51:34Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMAxdcElc1DYwyAQ//bw6BZ4XWtBfseSxcy7WYE1ML08CIAiSoRyERndv8NoBQ
[...]
            =ggcm
            -----END PGP MESSAGE-----
          fp: CEBD171D5C7B1C5FB960301167AC891FB1FDF3E4
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.7.3
